2026-01-16 Fri  Jari Aalto  <jari.aalto@tuni.fi>

	* tiny/tinysearch.el (tinysearch-search-word-main):
	docstring.
	(tinysearch-charset-control): Correct ':' and
	add '/' for Emacs isp mode words.

2025-11-20 Thu  Jari Aalto  <jari.aalto.fi@gmail.com>

        Byte compilation cleanup (Emacs 30.2).
        Add `-*- lexical-binding: t -*-' in other
        but `tinylib.el' which uses mnor mode creation
        macro and dynamic variables.

        * tiny/tinylibmail.el (ti::mail-ip-cleanup): Use
        `stringp'.
        (ti::mail-hmax): Use `noerr'.
        (ti::mail-generate-buffer-name): quiet byte compiler.
        (ti::mail-pgp-normal-p): use `point'.
        (ti::mail-pgp-data-study-ctb-byte): rm `tmp'.
        (ti::mail-email-domain-canonicalize): Rename. Was
        `ti::mail-email-domain-canonilize'.
        (ti::mail-email-domain-canonicalize): replace `add-to-list'
        with `push'.
        (ti::mail-whois-parse-email): Rm extra char `<': fatal
        error in `let'.
        (ti::mail-ip-at-point-1): rm `word'.
        (ti::mail-parse-received-string-date): docstring.

        * tiny/tinylib.el (ti::vc-rcs-files-in-dir): adjust
        variable `fn'.
        (ti::date-month-to-number): correct conversion error.
        (ti::keymap-bind-control): docstring.
        (ti::buffer-defun-function-name): use arg `point'.
        (ti::file-ange-completed-message): quiet byte compiler.
        (ti::process-perl-process-environment-macro): quiet byte
        compiler.
        (ti::process-tar-view-command): use arg `test'.
        (ti::compat-activate-region): quiet byte compiler:
        zmacs-regions.

        * tiny/tinyliby.el (ti::system-enable-disabled-options):
        correct 'sym to plain `sym'

        * tiny/tinylibt.el (ti::text-mouse-mark-region): quiet byte
        compiler.
        (ti::text-mouse-unmark-region): quiet byte
        compiler.

        * tiny/tinylibid.el (ti::id-cnv-txt2mode): rm
        unused var `loop'.
